--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 
   #betInput {
     padding: 10px;
-    width: 200px;
+    width: 400px;
     margin-top: 20px;
   }
 
@@ -68,6 +68,10 @@
     background-color: darkgreen;
   }
 
+  #lumina-bet{
+    width: 200px;
+  }
+
   /* Overall Page Style */
   body {
     font-family: Arial, sans-serif;
@@ -83,19 +87,7 @@
   }
 
 
-  /* Custom scrollbar for the task list */
-  .custom-scrollbar::-webkit-scrollbar {
-    width: 8px;
-  }
-  .custom-scrollbar::-webkit-scrollbar-track {
-    background: #2d2d2d;
-  }
-  .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #4a4a4a;
-    border-radius: 10px;
-    border: 2px solid #2d2d2d;
-  }
-
+  
   /* Task div styling */
   .task-div {
     padding: 20px;
@@ -130,15 +122,4 @@
     background-color: #0056b3;
   }
 
-  /* Fix the task section height and enable scrolling */
-  .task-section {
-    max-height: 300px; /* Adjust the height to fit your layout */
-    overflow-y: auto;
-    margin-top: 8px;
-    
-  }
-
-  .page-content {
-    max-height: calc(100vh - 100px); /* Prevent the entire page from scrolling */
-    overflow: hidden;
-  }
+ 
