--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@
   }
 
   /* Coin Flip Game Styles */
+
+  #info-icon:hover{
+    cursor: pointer;
+  }  
+  
   .container {
     text-align: center;
     margin-top: 100px;
